@@ -452,6 +452,14 @@
     <!-- A specialized field for geospatial search. If indexed, this fieldType must not be multivalued. -->
     <fieldType name="location" class="solr.LatLonType" subFieldSuffix="_coordinate"/>
 
+    <!-- Field type where stopwords are managed by the REST API -->
+    <fieldtype name="managed_en" class="solr.TextField">
+       <analyzer>
+        <tokenizer class="solr.StandardTokenizerFactory"/>
+        <filter class="solr.ManagedStopFilterFactory" managed="english" />
+      </analyzer>
+    </fieldtype>
+
  </types>
 
 
